# Observer

./: .gitignore  Dockerfile  README.md  agent_log_20250205.txt  build.sh  docker-compose.yml  get_download.sh  main.py  package-lock.json  package.json  print_info.sh  pyproject.toml  run.sh  supervisord.conf  versionstrings.txt  vite.config.ts
.github/: FUNDING.yml
Ob-Server/: api_handlers.py  gemini_handler.py  ob-server.py  openrouter_handler.py  ssl_handler.py
api/: Dockerfile  admin_auth.py  api.py  api_handlers.py  apple_payments.py  auth.py  auth0_manager.py  compute.py  deploy.sh  docker-compose.yml  fireworks_handler.py  gemini_handler.py  gemini_pro_handler.py  marketplace.db  marketplace.py  messaging.py  openrouter_handler.py  payments.py  quota_manager.py  requirements.txt  tools_router.py  transcriptions.py
app/: JUPYTER.md  TOOL_ADD.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start_command.sh  tailwind.config.js  tsconfig.json  vite.config.ts
app/desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/desktop/capabilities/: default.json  mobile.json  overlay.json  screen-selector.json
app/desktop/icons/: icon.icns
app/desktop/src/: commands.rs  controls.rs  install_cli.rs  lib.rs  lib.rs.backup  lib.rs.bak  notifications.rs  overlay.rs  shortcuts.rs
app/mobile/: Cargo.toml  ObserverProducts.storekit  Products.storykit  tauri.conf.json
app/mobile/capabilities/: mobile.json
app/mobile/extensions/: SETUP.md
app/mobile/extensions/ObserverBroadcast/: Info.plist  ObserverBroadcast.entitlements  SampleHandler.swift
app/mobile/icons/: icon.icns
app/mobile/plugins/auth/ios/Sources/: AuthPlugin.swift
app/mobile/plugins/pip/: Cargo.toml  README.md  build.rs
app/mobile/plugins/pip/android/: build.gradle.kts
app/mobile/plugins/pip/android/src/main/java/com/plugin/pip/: PipPlugin.kt
app/mobile/plugins/pip/ios/: Package.swift
app/mobile/plugins/pip/ios/Sources/: PipPlugin.swift
app/mobile/plugins/pip/permissions/: default.toml
app/mobile/plugins/pip/permissions/autogenerated/: reference.md
app/mobile/plugins/pip/permissions/autogenerated/commands/: start_pip.toml  start_pip_cmd.toml  stop_pip.toml  stop_pip_cmd.toml
app/mobile/plugins/pip/permissions/schemas/: schema.json
app/mobile/plugins/pip/src/: lib.rs  mobile.rs
app/mobile/plugins/screen-capture/: Cargo.toml
app/mobile/plugins/screen-capture/android/: .gitkeep  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
app/mobile/plugins/screen-capture/android/src/main/: AndroidManifest.xml
app/mobile/plugins/screen-capture/android/src/main/java/com/plugin/screencapture/: ScreenCapturePlugin.kt  ScreenCaptureService.kt
app/mobile/plugins/screen-capture/android/src/main/res/drawable/: ic_notification.xml
app/mobile/plugins/screen-capture/ios/: Package.swift
app/mobile/plugins/screen-capture/ios/Sources/: ScreenCapturePlugin.swift
app/mobile/plugins/screen-capture/permissions/: default.toml
app/mobile/plugins/screen-capture/permissions/autogenerated/: reference.md
app/mobile/plugins/screen-capture/permissions/autogenerated/commands/: get_frame_cmd.toml  ios.toml  stop_capture_cmd.toml
app/mobile/plugins/screen-capture/permissions/schemas/: schema.json
app/mobile/plugins/screen-capture/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
app/mobile/src/: audio_ring.rs  frame_server.rs  lib.rs  server.rs  video_frame.rs
app/plugins/screen-capture/: Cargo.toml  build.rs
app/plugins/screen-capture/android/src/main/java/com/plugin/screencapture/: AudioCaptureManager.kt  ScreenCapturePlugin.kt  ScreenCaptureService.kt
app/plugins/screen-capture/ios/Sources/: ScreenCapturePlugin.swift
app/plugins/screen-capture/permissions/: default.toml
app/plugins/screen-capture/permissions/autogenerated/: reference.md
app/plugins/screen-capture/permissions/autogenerated/commands/: get_app_group_path_cmd.toml  list_app_group_files_cmd.toml  read_broadcast_debug_log_cmd.toml  start_audio_stream_cmd.toml  start_video_stream_cmd.toml  stop_audio_cmd.toml  stop_audio_stream_cmd.toml  stop_video_cmd.toml  stop_video_stream_cmd.toml
app/plugins/screen-capture/permissions/schemas/: schema.json
app/plugins/screen-capture/src/: android.rs  audio.rs  audio_pipeline.rs  capture_config.rs  desktop.rs  error.rs  lib.rs  macos.rs  mobile.rs  targets.rs
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/plugins/screen-capture/: Cargo.toml  build.rs
app/src-tauri/plugins/screen-capture/ios/: Package.swift
app/src-tauri/plugins/screen-capture/ios/Sources/: ScreenCapturePlugin.swift
app/src-tauri/plugins/screen-capture/permissions/: default.toml
app/src-tauri/plugins/screen-capture/permissions/autogenerated/commands/: start_capture_cmd.toml
app/src-tauri/plugins/screen-capture/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
app/src-tauri/src/: commands.rs  controls.rs  lib.rs  notifications.rs  overlay.rs  shortcuts.rs
cli/: Cargo.toml
cli/src/: auth.rs  config.rs  main.rs  notify.rs  runner.rs
community/: add_test_agent.py  admin_auth.py  ai_proxy.py  api.py  api_handlers.py  auth.py  auth0_manager.py  compute.py  fireworks_handler.py  gemini_handler.py  logging_config.py  marketplace.db  marketplace.py  openrouter_handler.py  payments.py  quota.py  quota_manager.py  tools_router.py
desktop/: package-lock.json  package.json  setup_bundled_python.sh  vite.config.ts
docker/: DOCKER.md  Dockerfile  docker-compose.yml  print_info.sh  run.sh
marketplace/: app.py  requirements.txt
observer/: __init__.py  agent.py  capture.py  model.py  tools.py
observer-ollama/: observer_ollama.py  pyproject.toml  test.py
python/: api.py  run.py
src/: App.css  App.tsx
src-tauri/: tauri.conf.json
status/: README.md  index.html  package.json  wrangler.jsonc
tools/: notification.py
webapp/: index.html  package.json  stats.html  vite.config.ts
website/: index.html  package-lock.json  (+2 more)
(+372 files in other folders)
