[package]
name = "observer-mobile"
version = "1.3.7"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "observer-mobile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-screen-capture = { path = "./plugins/screen-capture" }
tauri-plugin-pip = { path = "./plugins/pip" }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-shell = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-edge-to-edge = "0.3"
tauri-plugin-deep-link = "2"
tauri-plugin-auth = { path = "./plugins/auth" }
tauri-plugin-ios-keyboard = "0.1"

# HTTP server for broadcast extension and proxy
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
