[package]
name = "observer-mobile"
version = "2.0.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "observer-mobile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Tauri plugins
tauri-plugin-screen-capture = { path = "../plugins/screen-capture" }
tauri-plugin-pip = { path = "./plugins/pip" }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-shell = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-edge-to-edge = "0.3"
tauri-plugin-deep-link = "2"
tauri-plugin-web-auth = "1"
tauri-plugin-iap = "0.7"
tauri-plugin-opener = "2"

# HTTP server for broadcast extension and proxy
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }

# Shared memory for iOS audio ring buffer
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-ios-keyboard = "0.1"
