[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# --- Build Dependencies ---
[build-dependencies]
tauri-build = { version = "2.0.5", features = [] } # No features here

# --- Runtime Dependencies ---
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# The 'api-all' feature goes on the 'tauri' crate, not 'tauri-build'
tauri = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc" 

screenshots = "0.8.5"
base64 = "0.21.0"
image = "0.24.6"
tauri-plugin-screenshots = "2.2.0"

tauri-plugin-shell = "2" # Add the shell plugin


# Web server Dependencies
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] } # MODIFIED
tower-http = { version = "0.5.0", features = ["fs"] } # ADD "cors" FEATURE
