[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# --- Build Dependencies ---
[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

# --- Runtime Dependencies ---
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.0", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-log = "2.0.0-rc"

# These seem to be for other functionality, keeping them
screenshots = "0.8.5"
base64 = "0.21.0"
image = "0.24.6"
tauri-plugin-screenshots = "2.2.0"

# Keep the shell plugin for default actions
tauri-plugin-shell = "2"

# Web server Dependencies
# We can be more specific with tokio features now
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = { version = "0.7", features = ["json"] } # "macros" feature is not used by your current code
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
futures = "0.3"
# async-stream is no longer needed as it was used in exec_handler
reqwest = { version = "0.12", features = ["json", "stream"] }
http-body-util = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
