[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-screen-capture"

[lib]
name = "tauri_plugin_screen_capture"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2.3.0"
log = "0.4"
thiserror = "2.0"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
xcap = "0.8.2"  # Cross-platform window/monitor enumeration and capture
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.21.0"
tokio = { version = "1", features = ["sync", "time"] }
parking_lot = "0.12"

# Platform-specific audio capture (cpal was unreliable for system audio loopback)
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.0"  # macOS ScreenCaptureKit for system audio capture

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22.0"  # Windows WASAPI for system audio loopback

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
