[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-screen-capture"

[lib]
name = "tauri_plugin_screen_capture"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tauri = "2.3.0"
log = "0.4"
thiserror = "2.0"

# Desktop-only dependencies (shared across all desktop platforms)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.21.0"
tokio = { version = "1", features = ["sync", "time"] }
parking_lot = "0.12"

# xcap for Windows/Linux (cross-platform capture)
[target.'cfg(all(not(any(target_os = "android", target_os = "ios")), not(target_os = "macos")))'.dependencies]
xcap = "0.8.2"  # Cross-platform window/monitor enumeration and capture for Windows/Linux

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rubato = "0.15"  # Audio resampling for PCM pipeline (48kHz -> 16kHz)

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.0"  # macOS ScreenCaptureKit for video and audio capture
xcap = "0.8.2"  # Still used for target enumeration (can be replaced with SCShareableContent later)
rubato = "0.15"  # Audio resampling for PCM pipeline (48kHz -> 16kHz)

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22.0"  # Windows WASAPI for system audio loopback
rubato = "0.15"  # Audio resampling for PCM pipeline (48kHz -> 16kHz)

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"  # JNI bindings for receiving data from Kotlin
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.21.0"
rubato = "0.15"  # Audio resampling for PCM pipeline (48kHz -> 16kHz)
parking_lot = "0.12"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
