[package]
name = "tauri-plugin-pip"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-pip"

[lib]
name = "tauri_plugin_pip"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = "2.3.0"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
