[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_plugin_screen_capture"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2.3.0"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
